fix overlapping div, dead link in slide

--- a/css/shanti-main.css
+++ b/css/shanti-main.css
@@ -815,7 +815,7 @@ a.btn,a.btn:hover,a.btn:active{border:none!important;}
   z-index: 1;
 }
 /* play- pause button */
-.carousel.carousel-fade .control-box-2{ text-align:center; position:relative; top:-.2rem; left:0;}
+.carousel.carousel-fade .control-box-2{ position:relative; top:-.2rem; left:0; width:4rem; margin:0 auto;}
 
 
 @media all and (transform-3d), (-webkit-transform-3d) {
@@ -2178,7 +2178,7 @@ p.modal-title{ font-size:110%;}
   .collections ul li{ width:15%; margin-left:8%;}
   
   .carousel-pause.btn.btn-sm{  padding: 0.55rem 0.9rem !important; width:3.2rem; height:3rem;font-size: 1em !important;margin:0 50%;}
-  .carousel.carousel-fade .control-box-2{ text-align:center; position:relative; top:-2rem;left:-1.7rem;}
+  .carousel.carousel-fade .control-box-2{ left:-1.7rem;}
 }
 
 @media screen and (min-width: 850px) {
